# SPEC

./: .gitignore  0  BEST_I_HAVE_DONE_WITH_MY_METHOD  CMakeLists.txt  README.md  SPEC.cbp  analyze_results.py  build_images.py  create_runner_script.sh  dbg-runall.sh  dbg_runall_n1.sh  logger.cfg  makeall.sh  makeall.sh~  makedbg.sh  no_lb_runall_n1.sh  out.npz  parse_outfile.py  run.sh  runall_alpha_tuning.sh  runall_base.sh  runall_base_debug.sh  runall_n1.sh  runall_n10.sh  runall_n15.sh  runall_n1_debug.sh  runall_n2.sh  runall_n3.sh  runall_n4.sh  runall_n5.sh  spec-new.slurm  spec-over.slurm  spec.slurm  to_beat
data-DO-NOT-DELETE/: Boulmier-32-1000-100it  Menon-32-1000-100it  Menon2-32-1000-100it
include/: BandPartitioner.hpp  CPULoadDatabase.hpp  Cell.hpp  Communication.hpp  GossipDatabase.hpp  GossipPropagator.hpp  LoadBalancer.hpp  LoadBalancingApproach.hpp  Simflow.hpp  SimulatedLBM.hpp  SimulationParams.hpp  StdApproach.hpp  StripeLoadBalancer.hpp  Time.hpp  ULBA.hpp  Utils.hpp  WeightUpdater.hpp  Window.hpp  ZoltanLoadBalancer.hpp  ZoltanUtils.hpp  band_partitioner.hpp  cell.hpp  communication.hpp  io.hpp  main.hpp  utils.hpp  window.hpp  zoltan_fn.hpp  zupply.hpp
script/: Analyze_results.ipynb  files_to_download.txt
src/: CLIParser.cpp  CMakeLists.txt  Cell.cpp  GossipPropagator.cpp  LoadBalancer.cpp  LoadBalancingApproach.cpp  Simflow.cpp  SimulatedLBM.cpp  StdApproach.cpp  ULBA.cpp  Utils.cpp  WeightUpdater.cpp  main.cpp  main.cpp.bkp  main.hpp  zupply.cpp
